--- a/.github/workflows/r.yml
+++ b/.github/workflows/r.yml
@@ -7,6 +7,9 @@
 # additional example workflows available for the R community.
 
 name: R
+defaults:
+   env:
+        CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
 
 on:
   push:
